--- a/app/src/main/res/menu/drawer_menu_fisher.xml
+++ b/app/src/main/res/menu/drawer_menu_fisher.xml
@@ -8,6 +8,11 @@
             android:icon="@drawable/ic_baseline_home_24"/>
 
         <item
+            android:id="@+id/addfish"
+            android:title="@string/addfish"
+            android:icon="@drawable/ic_baseline_add_circle_outline_24"/>
+
+        <item
             android:id="@+id/requestfish"
             android:title="@string/request"
             android:icon="@drawable/ic_baseline_format_list_bulleted_24"/>
