--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -31,7 +31,7 @@
             android:textStyle="bold"
             android:layout_gravity="center"
             android:textColor="@color/black"
-            android:text="@string/splash_title"/>
+            android:text="@string/app_name"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
