--- a/app/src/main/res/layout/fragment_feed_back.xml
+++ b/app/src/main/res/layout/fragment_feed_back.xml
@@ -17,10 +17,10 @@
         android:textSize="21sp"/>
 
     <com.google.android.material.button.MaterialButtonToggleGroup
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/toggle_button_group"
         app:singleSelection="true"
         app:selectionRequired="true"
+        android:layout_marginVertical="3dp"
         android:layout_marginHorizontal="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
