--- a/app/src/main/res/layout/fragment_fishers_home.xml
+++ b/app/src/main/res/layout/fragment_fishers_home.xml
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="12dp"
-                android:text="Fishing-Master"
+                android:text="Fresh Fins"
                 android:textColor="@color/black"
                 android:textSize="24sp" />
 
