--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
         android:textStyle="bold"
         android:gravity="center"
         android:layout_gravity="center"
-        android:textSize="25dp"/>
+        android:textSize="25sp"/>
 
     <EditText
         android:layout_marginBottom="15dp"
