--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -22,7 +22,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#f06595">
+            android:background="#4AB2E3">
 
             <ImageView
                 android:layout_width="150dp"
@@ -35,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:text="Search by fish"
                 android:textSize="30sp"
+                android:fontFamily="@font/k2d_semibold"
                 android:textColor="@color/white"
                 android:layout_alignParentEnd="true"
                 android:padding="10dp"
@@ -66,13 +67,14 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#9B30FF">
+            android:background="#E12027">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:padding="10dp"
+                android:fontFamily="@font/k2d_semibold"
                 android:text="Search by boat"
                 android:textColor="@color/white"
                 android:textSize="27sp" />
